@@ -1,3 +1,9 @@
+2004-08-14  John Finlay  <finlay@moeraki.com>
+
+	* gobject/pygenum.c (pyg_enum_repr) Match enum values to avoid
+	segfaults when enum minimum isn't 0 and values aren't a continuous
+	sequence.
+
 Wed Aug 11 11:43:07 2004  Jonathan Blandford  <jrb@redhat.com>
 
 	* Makefile.am:
